# gen-report

./: .example.env  .gitignore  README.md  pyproject.toml
docs/: use_cases.md
src/gen_report/: __init__.py  __main__.py
