[project]
name = "gen-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "insleker", email = "bkinnightskytw@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.75.9",
    "mammoth>=1.10.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
gen-report = "gen_report:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
